add database and monitoring and consumer-v3